# route-master

./: .editorconfig  .flutter-plugins-dependencies  .gitignore  LICENSE  PLATFORM_SETUP.md  README.md  analysis_options.yaml  index.html  package.json  pnpm-lock.yaml  pubspec.yaml  vite.config.ts
.dart_tool/: package_config.json  package_config_subset  package_graph.json
components/track-editor/: .gitignore  LICENSE  README.md  package.json
components/track-editor/demo/: index.html
components/track-editor/src/: TrackEditor.ts  index.ts  track-editor.ts
doc/: Architecture.md
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
ios/Runner/Base.lproj/: LaunchScreen.storyboard
lib/: main.dart
lib/models/: activity.dart  activity_summary.dart
lib/services/: runhub_service.dart
lib/ui/pages/: home_page.dart
lib/ui/theme/: app_theme.dart
lib/ui/widgets/: activities_tab.dart  dashboard_tab.dart  settings_tab.dart
macos/: Podfile
macos/Runner/: DebugProfile.entitlements  Info.plist  Release.entitlements
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner/Base.lproj/: MainMenu.xib
macos/Runner/Configs/: AppInfo.xcconfig
rust_core/: Cargo.toml
rust_core/src/: api.rs  connectors.rs  crypto.rs  database.rs  lib.rs  models.rs  processing.rs  sync.rs
rust_core/src/connectors/: coros.rs  garmin.rs
src/: App.css  App.tsx  config.ts  main.tsx
src-tauri/: Cargo.toml
src/components/: logo.tsx  no-ssr.tsx  sync-data-menu.tsx
src/components/auth/: _layout.tsx  auth-guard.tsx  (+5 more)
src/contexts/: files-content.tsx  user-context.tsx
src/lib/: get-site-url.ts  utils.ts
src/types/: module.d.ts
src/views/: App.tsx  index.tsx  layout.tsx  not-found.tsx  page.tsx
web/: index.html
(+74 files in other folders)
